removed klouformation and deployment