@@ -35,6 +35,9 @@ object RunHandler {
         }
         return arrayOf(
                 "java",
+                "-Djava.security.debug=access:failure",
+                "-Djava.security.manager",
+                "-Djava.security.policy=executor.policy",
                 "-classpath"
         ) + (EnvironmentManager.classPathUris + outputDir.toFile()).foldIndexed("") { index, acc, file -> acc + (if(index > 0) ":" else "") + file.absoluteFile} +
                 compilationResult.mainClass
